# plane_line_slam

./: CMakeLists.txt  CMakeLists.txt~  Kinect2QualisysCalibration.cpp  PlaneLineSLAM.cpp  README.md  SLAM_sim.cpp  SLAM_tum.cpp  Simulation.cpp  Simulation_Tum.cpp  test.cpp  test_simulation.cpp
backend/: bundle_adjustment.cpp  bundle_adjustment.h  factor_graph.cpp  factor_graph.h  loop_closing.cpp  loop_closing.h  pose_graph_optimization.cpp  pose_graph_optimization.h
evaluate/: relative_pose_error.cpp  relative_pose_error.h
features/: edge_point_extraction.cpp  edge_point_extraction.h  geometric_feature_matching.cpp  geometric_feature_matching.h  it_geometric_feature_matching.cpp  it_geometric_feature_matching.h  line_extraction.cpp  line_extraction.h  line_matching.cpp  line_matching.h  plane_extraction.cpp  plane_extraction.h  plane_extraction_base.cpp  plane_extraction_base.h  plane_matching.cpp  plane_matching.h  plane_param_estimation.cpp  plane_param_estimation.h  plane_segmentation.cpp  plane_segmentation.h
motion/: motion_estimation (copy).cpp  motion_estimation.cpp  motion_estimation.h
systems/: system_extrinsic_calibration.cpp  system_extrinsic_calibration.h  system_plane_line_shadow.cpp  system_plane_line_shadow.h  system_relocalization.cpp  system_relocalization.h  system_simulation.cpp  system_simulation.h  system_simulation_tum.cpp  system_simulation_tum.h  system_slam_sim.cpp  system_slam_sim.h  system_slam_tum.cpp  system_slam_tum.h
types/: map (copy).h  map.cpp  map.h  types.cpp  types.h
